# DAWARE-ROLLUP-BENCH-main

./: .gitignore  README.md  REPORT.md  pyproject.toml
backend/: main.py
backend/api/: simulation.py
dashboard/: app.py
experiments/: run_benchmark.py  scenarios.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: BottleneckChart.tsx  CostChart.tsx  LatencyChart.tsx  ResultsTable.tsx  Sidebar.tsx  SimulationLoader.tsx  TrustRadar.tsx
frontend/src/hooks/: useSimulation.ts
frontend/src/types/: index.ts
notebooks/: analysis.ipynb
src/da_bench/: __init__.py  batch.py  config.py  cost_model.py  metrics.py  simulator.py  transaction.py
src/da_bench/da_strategies/: __init__.py  base.py  blob.py  calldata.py  compressed.py  external.py
tests/: test_batch.py  test_da_strategies.py  test_simulator.py  test_transaction.py
