[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "da-bench"
version = "0.1.0"
description = "Data Availability-Aware Rollup Benchmarking Platform"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28",
    "plotly>=5.18",
    "pandas>=2.1",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/da_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
